--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -12,4 +12,4 @@ ENV TERM xterm
 
 RUN apt-get install -y vim less
 RUN pip install --upgrade pip
-RUN pip install --upgrade setuptools numpy
+RUN pip install --upgrade setuptools numpy avro-python3
