--- a/dotnet/mylib1/mylib1.csproj
+++ b/dotnet/mylib1/mylib1.csproj
@@ -11,5 +11,6 @@
   <ItemGroup>
     <PackageReference Include="IRISGatewayCore21" Version="1.0.0" />
     <PackageReference Include="IRISProviderCore21" Version="1.0.0" />
+    <PackageReference Include="Apache.Avro" Version="1.11.0" />
   </ItemGroup>
 </Project>
