--- a/dotnet21-dev/Dockerfile
+++ b/dotnet21-dev/Dockerfile
@@ -7,3 +7,4 @@ ENV ISC_LIBDIR ${ISC_PACKAGE_INSTALLDIR}/dev/dotnet/bin/Core21
 
 WORKDIR /source
 COPY --from=store/intersystems/iris-community:2020.4.0.547.0 $ISC_LIBDIR/*.nupkg $GWLIBDIR/
+COPY build.sh .
