--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - ./datavol/share:/root/share 
 
   netgw:
+    hostname: netgw
     image: intersystemsdc/pexservice:latest
     build:
       context: dotnet
